# hidindicator

./: Makefile.am  configure
debian/: changelog
hidindicator-1.0.0/: Makefile.in  configure.ac
hidindicator-1.0.0/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
hidindicator-1.0.0/debian/: changelog~  control  control~  copyright~
hidindicator-1.0.0/rules/: 35-get-usb-device-info.rules  90-inform-user-on-hid.rules  Makefile  Makefile.am
hidindicator-1.0.0/scripts/: Makefile  Makefile.am
rules/: Makefile.in
scripts/: Makefile.in  notify  store
